/*
Copyright 2012 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto2";

package groupcachepb;

// get
message GetRequest {
  required string group = 1;
  required string key = 2; // not actually required/guaranteed to be UTF-8
}

message GetResponse {
  optional bytes value = 1;
  optional double minute_qps = 2;
}

// batch get
message KeyValue {
    required string key = 1; // not actually required/guaranteed to be UTF-8
    required int32 idx = 2;
    optional bytes value = 3;
    optional string error = 4;
}

message GetBatchRequest {
    required string group = 1;
    repeated KeyValue kvs = 2;
}

message GetBatchResponse {
    repeated KeyValue kvs = 1;
    optional double minute_qps = 2;
}

// put
message PutRequest {
  required string group = 1;
  required string key = 2; // not actually required/guaranteed to be UTF-8
  required bytes value = 3;
}

message PutResponse {
  optional double minute_qps = 1;
}

// batch put
message PutBatchRequest {
    required string group = 1;
    repeated string keys = 2; // not actually required/guaranteed to be UTF-8
    repeated bytes values = 3;
}

message PutBatchResponse {
    optional double minute_qps = 1;
}

// packed values
message Entries {
    repeated string keys = 1;
    repeated bytes values = 2;
}

// rpc
service GroupCache {
  rpc Get(GetRequest) returns (GetResponse) {};
  rpc Put(PutRequest) returns (PutResponse) {};
}
